# mno_pede_detector

./: CMakeLists.txt  README.md  package.xml
config/: ros.yaml
launch/: mno_pede_detector.launch.xml
src/: DetectionSubscriber.cpp  traffic_light_detector.cpp
